style.css
* {
  margin: 0;
}

body {
  display: grid;
  grid-template-columns: 1fr 4fr;
}

.sidebar {
  background-color: blue;
  color: white;
  padding: 16px;
  grid-row: 1 / 3;
  display: grid;
  gap: 50px;
}

.sidebar__nav-section {
  display: grid;
  gap: 8px;
}

.header {
  padding: 16px 32px;
  display: grid;
  grid-template-columns: 2fr 1fr;
  gap: 16px;
  align-items: center;
}

.header__profile {
  justify-self: end;
}

.header__buttons {
  justify-self: end;
}

.main-content {
  background-color: lightgray;
  display: grid;
  grid-template-columns: 4fr 1fr;
}

.main-content__projects {
  grid-row: 1 / 3;
}

